# example-rust-wasm-elm

./: .gitignore  Cargo.toml  Makefile.toml  README.md  elm.json
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Main.elm  Model.elm  Msg.elm  View.elm  Wasm.elm
shared-lib/: Cargo.toml
shared-lib/src/: lib.rs
web/: index.html
