[package]
name = "backend"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1.1"
actix-files = "0.2"

tracing = "0.1"
tracing-subscriber = "0.2"

shared-lib = { path = "../shared-lib" }