[package]
name = "shared-lib"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = [ "serde-serialize" ] }
js-sys = "0.3"
serde = { version = "1.0", features = [ "derive" ] }
serde-wasm-bindgen = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
